# crew-gantt

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GDD.md  README.md  TODO.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.claude/skills/app-icon-designer/: SKILL.md  package-lock.json  package.json
.github/workflows/: release.yml
plans/: GDD.md  TODO.md  agent-conversations.md  conflicts.md
scripts/: gen-icons.mjs  screenshot.mjs
src/: global.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: perf.test.ts  testkit.ts
src/core/calendar/: dates.test.ts  dates.ts  frenchHolidays.test.ts  frenchHolidays.ts
src/core/conflicts/: detect.test.ts  detect.ts
src/core/diff/: diff.test.ts  diff.ts
src/core/model/: demo.ts  factory.test.ts  factory.ts  index.ts  migrate.ts  model.test.ts  schema.ts  types.ts
src/i18n/: TODO.md  fr.ts
src/io/: autosave.ts  backup.ts  export.ts  fileAccess.ts  fsaccess.d.ts  ganttproject.test.ts  ganttproject.ts  handleStore.ts  tauri.ts
src/state/: baselineActions.ts  meetingActions.ts  notifications.ts  proposalActions.ts  resourceActions.ts  schedule.ts  store.test.ts  store.ts  taskActions.test.ts  taskActions.ts  uiStore.ts
src/styles/: index.css
tests/e2e/: _help-shots.spec.ts  app.spec.ts
tests/fixtures/: equipe-web.crewgantt.json
(+72 files in other folders)
