[package]
name = "crew-gantt"
# Version figée : sans effet sur l'app livrée (voir tauri.conf.json qui pointe vers
# ../package.json, seule source de vérité pour la version — cf. CLAUDE.md/AGENTS.md).
# Cargo exige un champ version, mais Rust/Cargo ne l'utilisent que pour ce crate lui-même.
version = "0.0.0"
description = "CrewGantt - outil de pilotage d'équipe multi-projets"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
